[package]
name = "whatisthis"
version = "1.0.0"
description = "A tool to identify file types based on their content"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/whatisthis"
homepage = "https://file.n4n5.dev/"
repository = "https://github.com/Its-Just-Nans/whatisthis"

[dependencies]
file-format = { version = "0.28.0", features = ["reader"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
kamadak-exif = "0.6.1"
zip = { version = "8.1.0", default-features = false, features = [
    # "aes-crypto",
    # "bzip2",
    # "xz",
    "deflate64",
    "deflate",
    "lzma",
    "time",
    "zstd",
] }
clap = { version = "4.5.60", features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "Url",
    "Blob",
] }
